--- a/client/views/settings/website-management/info-carousel/info-carousel.html
+++ b/client/views/settings/website-management/info-carousel/info-carousel.html
@@ -1,4 +1,4 @@
-<div sd-carousel data-model="webPublisher.infoCarouselActive" data-finish="webPublisher.toggleInfoCarousel()">
+<div sd-carousel data-model="webPublisherSettings.infoCarouselActive" data-finish="webPublisherSettings.toggleInfoCarousel()">
     <div sd-carousel-step data-code="page1">
         <div class="sd-carousel__page-header">
         <h2 class="sd-carousel__page-heading">Create site wizard</h2>
@@ -9,7 +9,7 @@
             <p>In the Output Settings screen, click on the plus button in top right corner. With thisaction, a modal dialog will open - create site wizard. Within the wizard, just follow steps to create your site and choose theme and apply to your site.</p>
         </div>
         <div class="sd-carousel__page-footer">
-            <a class="btn btn--large btn--sd-green" ng-click="webPublisher.toggleInfoCarousel()">Ok, i got it!</a>
+            <a class="btn btn--large btn--sd-green" ng-click="webPublisherSettings.toggleInfoCarousel()">Ok, i got it!</a>
         </div>
     </div>
     <div sd-carousel-step data-code="page2">
@@ -23,7 +23,7 @@
             </p>
         </div>
         <div class="sd-carousel__page-footer">
-            <a class="btn btn--large btn--sd-green" ng-click="webPublisher.toggleInfoCarousel()">Ok, i got it!</a>
+            <a class="btn btn--large btn--sd-green" ng-click="webPublisherSettings.toggleInfoCarousel()">Ok, i got it!</a>
         </div>
     </div>
     <div sd-carousel-step data-code="page3">
@@ -36,7 +36,7 @@
             <p>On the <strong>Install Theme</strong> tab, you can quickly browse throught available themes list. By clicking on details/install button you can check theme details and install the theme. <strong>Preview</strong> will open new browser tab with theme demo instance, with predefined content.</p>
         </div>
         <div class="sd-carousel__page-footer">
-            <a class="btn btn--large btn--sd-green" ng-click="webPublisher.toggleInfoCarousel()">Ok, i got it!</a>
+            <a class="btn btn--large btn--sd-green" ng-click="webPublisherSettings.toggleInfoCarousel()">Ok, i got it!</a>
         </div>
     </div>
     <div sd-carousel-step data-code="page4">
@@ -49,7 +49,7 @@
             <p>Once you entered theme details, you can check additional information about the theme. If you like the theme, you can install it, by clicking on <strong>Install</strong> button. You can easily get back to themes list by clicking on left arrow.</p>
         </div>
         <div class="sd-carousel__page-footer">
-            <a class="btn btn--large btn--sd-green" ng-click="webPublisher.toggleInfoCarousel()">Ok, i got it!</a>
+            <a class="btn btn--large btn--sd-green" ng-click="webPublisherSettings.toggleInfoCarousel()">Ok, i got it!</a>
         </div>
     </div>
     <div sd-carousel-step data-code="page5">
@@ -62,7 +62,7 @@
             <p>Once you finish install process, you have to <strong>activate</strong> the theme to be able to use it on your site.</p>
         </div>
         <div class="sd-carousel__page-footer">
-            <a class="btn btn--large btn--sd-green" ng-click="webPublisher.toggleInfoCarousel()">Ok, i got it!</a>
+            <a class="btn btn--large btn--sd-green" ng-click="webPublisherSettings.toggleInfoCarousel()">Ok, i got it!</a>
         </div>
     </div>
     <div sd-carousel-step data-code="page6">
@@ -75,7 +75,7 @@
             <p>This is last step in the wizard. After you activated chosen theme it should be marked as green. At this point you can finish (click <strong>done</strong> button), or continue configuring your website. If you click <strong>Configure site</strong>, main settings dialog will open so you can set routes, navigation etc.</p>
         </div>
         <div class="sd-carousel__page-footer">
-            <a class="btn btn--large btn--sd-green" ng-click="webPublisher.toggleInfoCarousel()">Ok, i got it!</a>
+            <a class="btn btn--large btn--sd-green" ng-click="webPublisherSettings.toggleInfoCarousel()">Ok, i got it!</a>
         </div>
     </div>
 </div>
