--- a/client/views/settings/website-management/manage-navigation-menu.html
+++ b/client/views/settings/website-management/manage-navigation-menu.html
@@ -1,34 +1,30 @@
-
-
-<div class="sd-page__header sd-page__header--white padding--right0">
-    <button class="backlink" ng-click="webPublisher.changeTab('navigation')"></button>
+<div class="sd-page__header">
+    <button class="backlink" ng-click="webPublisherSettings.changeManageTab('navigation')"></button>
     <h2 class="sd-page__page-heading">{{menu.name}}</h2>
     <span class="sd-page__element-grow"></span>
-    <button class="navbtn sd-create-btn" ng-click="webPublisher.toogleCreateMenu(true)">
-        <i class="icon-plus-large"></i>
-        <span class="circle"></span>
-    </button>
+    <a href="" ng-click="webPublisherSettings.toogleCreateMenu(true)"
+        class="btn btn--primary"><i class="icon-plus-sign"></i>Add new</a>
 </div>
 
-<div class="sd-page-content__content-block sd-page-content__content-block--main" ng-class="{'open-preview': webPublisher.menuPaneOpen}" >
+<div class="sd-page-content__content-block sd-page-content__content-block--main" ng-class="{'open-preview': webPublisherSettings.menuPaneOpen}" >
     <div class="sd-column-box--3">
         <div class="sd-column-box__main-column">
-            <ul class="treeList sd-list-item-group" dnd-list dnd-drop="webPublisher.reorderMenu(menu, item, index)">
-                <li ng-repeat="data in menu.children | orderBy: 'position'" ng-include="'navigation-tree-renderer.html'"></li>
+            <ul class="treeList sd-list-item-group" dnd-list dnd-drop="webPublisherSettings.reorderMenu(menu, item, index)">
+                <li ng-repeat="data in menu.children | orderBy: 'position'" ng-include="'settings/website-management/partials/navigation-tree-renderer.html'"></li>
             </ul>
         </div>
 
         <div class="sd-preview-panel">
             <div class="side-panel side-panel--shadow-right">
                 <div class="side-panel__header side-panel__header--border-b">
-                    <a class="icn-btn side-panel__close" ng-click="webPublisher.toogleCreateMenu(false)"><i class="icon-close-small"></i></a>
-                    <h3 class="side-panel__heading" ng-if="webPublisher.isObjEmpty(webPublisher.selectedMenu)" translate>Add Menu Item</h3>
-                    <h3 class="side-panel__heading" ng-if="!webPublisher.isObjEmpty(webPublisher.selectedMenu)" translate>Edit Menu Item</h3>
+                    <a class="icn-btn side-panel__close" ng-click="webPublisherSettings.toogleCreateMenu(false)"><i class="icon-close-small"></i></a>
+                    <h3 class="side-panel__heading" ng-if="webPublisherSettings.isObjEmpty(webPublisherSettings.selectedMenu)" translate>Add Menu Item</h3>
+                    <h3 class="side-panel__heading" ng-if="!webPublisherSettings.isObjEmpty(webPublisherSettings.selectedMenu)" translate>Edit Menu Item</h3>
                 </div>
 
                 <div class="side-panel__content">
                     <div class="side-panel__content-block">
-                        <form name="webPublisher.menuForm" class="flat">
+                        <form name="webPublisherSettings.menuForm" class="flat">
                             <fieldset class="label-light">
                                 <div class="item">
                                     <label for="menuName" translate>name</label>
@@ -70,10 +66,10 @@
                 </div>
                 <div class="side-panel__footer side-panel__footer--button-box">
                     <div class="flex-grid flex-grid--boxed-small flex-grid--wrap-items flex-grid--small-2">
-                        <a class="btn btn--hollow" ng-click="webPublisher.toogleCreateMenu(false)">Cancel</a>
+                        <a class="btn btn--hollow" ng-click="webPublisherSettings.toogleCreateMenu(false)">Cancel</a>
                         <button class="btn btn--primary"
-                            ng-disabled="webPublisher.menuForm.$invalid || !webPublisher.menuForm.$dirty"
-                            ng-click="webPublisher.saveMenu(webPublisher._refreshCurrentMenu)">
+                            ng-disabled="webPublisherSettings.menuForm.$invalid || !webPublisherSettings.menuForm.$dirty"
+                            ng-click="webPublisherSettings.saveMenu(webPublisherSettings._refreshCurrentMenu)">
                             Save
                         </button>
                     </div>
