fix: Minor UI issue with date picker in automatic list criteria

--- a/client/views/settings/website-management/manage.html
+++ b/client/views/settings/website-management/manage.html
@@ -33,7 +33,7 @@
             translate>Save</button>
     </div>
 </div>
-<div class="sd-page__content no-padding">
+<div class="sd-page__content sd-page__content--d-flex-column no-padding">
     <ul class="nav-tabs">
         <li ng-class="{'nav-tabs__tab--active': !webPublisherSettings.manageTab || webPublisherSettings.manageTab === 'general'}" class="nav-tabs__tab">
             <button ng-click="webPublisherSettings.changeManageTab('general')"
