fix: Page refresh when clicking on 'create new list' in content lists section

--- a/client/views/content-lists/content-lists-list.html
+++ b/client/views/content-lists/content-lists-list.html
@@ -7,7 +7,7 @@
 <div class="sd-grid-list sd-grid-list--large">
     <div
         ng-if="list.type !== 'bucket'"
-        ng-repeat="list in lists | filter: {type: webPublisherContentLists.listType} | orderBy: 'id' track by list.id"
+        ng-repeat="list in lists | filter: {type: webPublisherContentLists.listType} | orderBy: 'id'"
         ng-include="'list-box.html'"
     ></div>
 </div>
