fix: Tooltips needed for a few buttons

--- a/client/views/analytics/index.html
+++ b/client/views/analytics/index.html
@@ -9,7 +9,8 @@
         <div class="sd-sidebar-menu sd-sidebar-menu--second-level sd-page-content__left-tabs" ng-include="'sidebar-content.html'"></div>
         <div class="sd-page-content__content-block">
             <div class="subnav">
-                <a href="#/publisher/dashboard" class="navbtn navbtn--left">
+                <a href="#/publisher/dashboard" class="navbtn navbtn--left"
+                    sd-tooltip="Dashboard" flow="right">
                     <i class="icon-arrow-left"></i>
                 </a>
                 <h3 class="subnav__page-title">Content Analytics</h3>
