fix: tenant management info button fixed

--- a/client/styles/helperElements.scss
+++ b/client/styles/helperElements.scss
@@ -22,6 +22,19 @@
     }
 }
 
+.fixedPosition {
+    position: fixed;
+
+    &--bottomRight {
+        bottom: 1rem;
+        right: 1rem;
+    }
+
+    &--top {
+        top: 0;
+    }
+}
+
 .margin {
     &--none {
         margin: 0!important;
