--- a/client/views/settings/website-management/tenant-list.html
+++ b/client/views/settings/website-management/tenant-list.html
@@ -16,7 +16,7 @@
 </div>
 <div class="sd-page__content relative">
     <div class="sd-loader" ng-if="loading"></div>
-    <a class="btn btn--sd-green btn--icon-only-circle btn--large sd-shadow--z4 absPosition absPosition--bottomRight" style="z-index:1" ng-click="webPublisherSettings.toggleInfoCarousel()"><i class="icon-info-large"></i></a>
+    <a class="btn btn--sd-green btn--icon-only-circle btn--large sd-shadow--z4 fixedPosition fixedPosition--bottomRight" style="z-index:1" ng-click="webPublisherSettings.toggleInfoCarousel()"><i class="icon-info-large"></i></a>
     <div class="sd-grid-list sd-grid-list--large sd-grid-list--no-margin">
         <div class="sd-grid-item-wrapper"
             ng-repeat="site in sites | orderBy: 'name'"
